--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>          
         </nav>
+        <div id="cessibilidade">
+            <button ID="aumentar-fonte" class="btn btn-primary">A+</button>
+        </div>
        
     </header>
 
