--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             </ul>          
         </nav>
         <div id="cessibilidade">
-            <button ID="aumentar-fonte" class="btn btn-primary">A+</button>
+            <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
+            <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
         </div>
        
     </header>
